--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -116,6 +116,7 @@
 {% endblock %}
 
 {% block body %}
+<div class="page-transition">
     <section class="hero-section">
         <div class="container">
             <h1 class="display-4 mb-4">Découvrez le Patrimoine Artistique Français</h1>
@@ -156,4 +157,5 @@
             {% endfor %}
         </div>
     </div>
+</div>
 {% endblock %} 
